[package]
name = "props-rs"
description = "parse .properties files"
version = "0.1.0"
authors = ["Zac Blanco <zacdblanco@gmail.com>"]
edition = "2018"
homepage = "https://github.com/ZacBlanco/props-rs"
repository = "https://github.com/ZacBlanco/props-rs"
license = "MIT"
readme = "README.md"
keywords = ["parser", "properties", "dotproperties"]
categories = ["parser-implementations", "config"]

[dependencies]
nom = "7"
